# ScorpioDR

./: .coveragerc  .gitignore  Jenkinsfile  LICENSE  README.md  setup.cfg  setup.py  tox.ini
dev_scripts/: conv2d.py
octocam_instrument/: __init__.py
octocam_instrument/octocam/: __init__.py  adclass.py  lookup.py
octocamdr/octocam/: parameters_octocam.py  parameters_octocam_image.py  parameters_octocam_image_ccd.py  parameters_octocam_image_nearIR.py  parameters_octocam_spect.py  parameters_octocam_spect_ccd.py  parameters_octocam_spect_nearIR.py  primitives_octocam.py  primitives_octocam_bundle.py  primitives_octocam_image.py  primitives_octocam_image_ccd.py  primitives_octocam_image_nearIR.py  primitives_octocam_spect.py  primitives_octocam_spect_ccd.py  primitives_octocam_spect_nearIR.py
scorpio_instrument/: __init__.py
scorpio_instrument/scorpio/: adclass.py
scorpio_instruments/scorpio/: __init__.py  adclass.py  lookup.py
scorpiodr/scorpio/: fitramp.py  parameters_scorpio.py  parameters_scorpio_bundle.py  parameters_scorpio_ccd.py  parameters_scorpio_ccd_image.py  parameters_scorpio_ccd_spect.py  parameters_scorpio_image.py  parameters_scorpio_image_ccd.py  parameters_scorpio_image_nearIR.py  parameters_scorpio_nearIR.py  parameters_scorpio_nearIR_image.py  parameters_scorpio_nearIR_spect.py  parameters_scorpio_spect.py  parameters_scorpio_spect_ccd.py  parameters_scorpio_spect_nearIR.py  primitives_scorpio.py  primitives_scorpio_bundle.py  primitives_scorpio_ccd.py  primitives_scorpio_ccd_image.py  primitives_scorpio_ccd_spect.py  (+9 more)
(+63 files in other folders)
