[metadata]
license_files = LICENSE

[tool:pytest]
addopts = --pyargs
markers =
    dragons_remote_data : Tests that download data from the archive.
    interactive : Tests for primitives that run interactively. Should run only locally.
    integration_test : Long tests using Reduce(...)
    preprocessed_data : Tests that require preprocessed data
    regression : Tests that will compare output data with reference data.
    scorpioimage : SCORPIO imaging tests
    slow : Slow tests

[pydocstyle]
convention=numpy

[tool.isort]
default_section = THIRDPARTY
known_first_party = scorpiodr
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = false
